# Outlook-Lite-for_Linux

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: build.yml
data/: dev.ofl.outlook-lite.appdata.xml  ofl.desktop
docs/superpowers/plans/: 2026-05-10-tauri-port.md
packaging/: PKGBUILD  build-local.sh  download-cef.sh
src/: app.cc  app.h  badge.cc  badge.h  client.cc  client.h  config.cc  config.h  inject.js  main.cc  notifications.cc  notifications.h  tray.cc  tray.h  window.cc  window.h
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: badge.rs  blocker.rs  config.rs  lib.rs  main.rs  notifications.rs
