[package]
name = "ofl"
version = "0.1.0"
edition = "2021"
description = "Outlook Lite for Linux"

[lib]
name = "ofl_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
notify-rust = "4"
zbus = "4"
once_cell = "1"
dirs = "5"
nix = { version = "0.29", features = ["fs"] }
open = "5"
